--- a/index.html
+++ b/index.html
@@ -433,7 +433,29 @@
                 <!-- Grid -->
                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 reveal">
                   <a href="YOUR-LINK-HERE" target="_blank" class="block">
- <!-- Item 5: Blender (Character Model) -->
+ <a href="https://www.figma.com/proto/yvUscAYIO32y2VwTmn78Rk/perfume-website?node-id=10-173&t=ACR1Sl741Ulc0v61-1&scaling=contain&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=4%3A2" 
+   target="_blank"
+   class="group relative aspect-video bg-slate-900 rounded-xl overflow-hidden border border-slate-800 hover:border-pink-500/50 transition-colors block">
+
+    <img src="Frame 1.png" alt="UI Concept" 
+         class="w-full h-full object-cover opacity-80 group-hover:opacity-100 transition-opacity hover:scale-105 duration-500"
+         onerror="this.src='https://placehold.co/600x400/1e293b/22d3ee?text=UI+Design'">
+
+    <div class="absolute top-2 right-2 p-2 bg-black/50 backdrop-blur-md rounded-lg z-10">
+        <i data-lucide="figma" class="text-white"></i>
+    </div>
+
+    <div class="absolute bottom-0 left-0 right-0 p-4 bg-gradient-to-t from-slate-900 to-transparent">
+        <span class="text-xs font-bold text-pink-400 uppercase tracking-wider mb-1 block">UI/UX</span>
+        <h3 class="text-lg font-bold text-white flex items-center gap-2">
+            UI Concept <i data-lucide="external-link" size="14"></i>
+        </h3>
+    </div>
+</a>
+
+
+                   
+<!-- Item 5: Blender (Character Model) -->
 <div class="group relative aspect-video bg-slate-900 rounded-xl overflow-hidden border border-slate-800 hover:border-pink-500/50 transition-colors">
 
     <!-- Video -->
@@ -456,26 +478,6 @@
 
 </div>
 
-
-                    <!-- Item 2: UI/UX (Clickable Figma Link) -->
-<a href="YOUR-VIDEO-LINK.mp4" target="_blank" class="group relative aspect-video bg-slate-900 rounded-xl overflow-hidden border border-slate-800 hover:border-pink-500/50 transition-colors block">
-
-    <video src="comp.mp4"
-           class="w-full h-full object-cover opacity-80 group-hover:opacity-100 transition-opacity"
-           autoplay muted loop playsinline></video>
-
-    <div class="absolute inset-0 flex items-center justify-center bg-black/40 group-hover:bg-black/20 transition-colors pointer-events-none">
-        <div class="w-12 h-12 rounded-full bg-white/20 backdrop-blur-sm flex items-center justify-center border border-white/50 group-hover:scale-110 transition-transform">
-            <i data-lucide="play" class="text-white ml-1"></i>
-        </div>
-    </div>
-
-    <div class="absolute bottom-0 left-0 right-0 p-4 bg-gradient-to-t from-slate-900 to-transparent">
-        <span class="text-xs font-bold text-pink-400 uppercase tracking-wider mb-1 block">Blender</span>
-        <h3 class="text-lg font-bold text-white">3D Character Model</h3>
-    </div>
-
-</a>
 
 
 
